...
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center_vertical"
            android:textColor="#717d94"
            android:textSize="16sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/user_story_recycler"
            android:contentDescription="column recycler"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description"
            app:layout_constraintBottom_toBottomOf="parent"/>
...
